Fixed dark mode switch button. Added text font.

--- a/src/components/searchBox/searchBox.styles.scss
+++ b/src/components/searchBox/searchBox.styles.scss
@@ -27,6 +27,7 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         &:focus{
             outline:none;
+            background-color: var(--element-color);
         }
        
        
